[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
reqwest = { version = "0.11", features = ["blocking"] } 
html2md = "0.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }

anyhow = "1" 
bytes = "1" 
futures = "0.3" 
tokio = { version = "1", features = ["full"] } 
tokio-util = { version = "0.6", features = ["codec"] }
